FEAT: 1. add new endpoint api 2. fix typos 3. add unit test
